Import of OSFAMERON/Data-SCORM-0.05 from CPAN.
gitpan-cpan-distribution: Data-SCORM
gitpan-cpan-version:      0.05
gitpan-cpan-path:         OSFAMERON/Data-SCORM-0.05.tar.gz
gitpan-cpan-author:       OSFAMERON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -28,8 +28,9 @@ requires:
   Mouse: 0
   Mouse::Util::TypeConstraints: 0
   MouseX::AttributeHelpers: 0
+  Params::Coerce: 0
   Scalar::Util: 0
   XML::Twig: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.05
