--- a/META.yml
+++ b/META.yml
@@ -4,13 +4,14 @@ author:
   - 'osfameron, C<< <osfameron at cpan.org> >>'
   - 'OSFAMERON <osfameron@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   Test::LongString: 0
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -33,4 +34,4 @@ requires:
   XML::Twig: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.06
+version: 0.07
